Queuing algorithm now sorts by matches and differences. Fixed large buttons not auto-shrinking to text content. Fixed accounts hotbar not auto-cutting off accounts that dont fit on-screen

--- a/terminal/src/index.css
+++ b/terminal/src/index.css
@@ -65,8 +65,11 @@ button:disabled {
 }
 
 button.large {
-  width: 182px;
   height: 42px;
+  width: auto;
+  white-space: nowrap;
+
+  padding: 0 19px 0 19px;
 }
 
 button.selected {
